--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-ATLAS_URI=your_mongodb_connection_string_here
+ATLAS_URI=mongodb+srv://shashireddy8639_db_user:Reddy1245@cluster0.twj54qv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
 JWT_SECRET=your_jwt_secret
